--- a/package.json
+++ b/package.json
@@ -9,11 +9,16 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@apollo/client": "^3.7.15",
     "autoprefixer": "10.4.14",
+    "colorthief": "^2.4.0",
+    "graphql": "^16.6.0",
     "next": "13.4.5",
-    "postcss": "8.4.24",
+    "postcss": "^8.4.24",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "tailwindcss": "3.3.2"
+    "sass": "^1.63.4",
+    "tailwindcss": "3.3.2",
+    "use-debounce": "^9.0.4"
   }
 }
